--- a/testenv/roles/mesosphere-marathon/tasks/main.yml
+++ b/testenv/roles/mesosphere-marathon/tasks/main.yml
@@ -4,3 +4,12 @@
   apt: name=marathon={{ marathon_version }} state=present update_cache=yes
   notify:
   - restart marathon
+
+- name: create marathon config directory
+  file: state=directory path=/etc/marathon/conf recurse=yes
+
+- name: write marathon settings
+  template: src=config.j2 dest=/etc/marathon/conf/{{ item.key }}
+  with_dict: marathon_config
+  notify:
+  - restart marathon
