Add support for constraints

--- a/test_arguments.yml
+++ b/test_arguments.yml
@@ -16,5 +16,7 @@ container:
 env:
   SETTINGS_FLAVOR: local
   SEARCH_BACKEND: sqlalchemy
+constraints:
+  - ['location', 'CLUSTER', 'i-abc123']
 # health_checks:
 #   - { protocol: HTTP, path: '/v1/_ping', gracePeriodSeconds: 3, intervalSeconds: 10, portIndex: 0, timeoutSeconds: 10, maxConsecutiveFailures: 3 }
