Use the deployment ID to determine that a deployment has finished

--- a/testenv/scale-app-second.yml
+++ b/testenv/scale-app-second.yml
@@ -8,25 +8,27 @@
     - name: test marathon
       marathon_app:
         state: present
-        name: multiple-instances
+        name: scale-app
         host: http://10.10.7.10:8080
-        memory: 128.0
+        memory: 64.0
         instances: 2
         container:
           type: DOCKER
           docker:
-            image: redis:latest
+            image: nginx:latest
             network: BRIDGE
             portMappings:
-              - containerPort: 6379
+              - containerPort: 80
                 hostPort: 0
-                protocol: tcp
+                protocol: "tcp"
+        env:
+          SETTINGS_FLAVOR: local
+          SEARCH_BACKEND: sqlalchemy
         health_checks:
-          - protocol: TCP
+          - protocol: HTTP
+            path: "/"
             gracePeriodSeconds: 3
             intervalSeconds: 10
             portIndex: 0
             timeoutSeconds: 10
             maxConsecutiveFailures: 3
-        labels:
-          foo: bar
