--- a/testenv/no-change.yml
+++ b/testenv/no-change.yml
@@ -13,7 +13,7 @@
         cpus: 0.1
         state: present
         name: no-change
-        host: http://10.10.7.10:8080
+        host: "http://{{ lookup('env','BEHAVE_IP') }}:8080"
         memory: 128.0
         instances: 1
         container:
